--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -37,14 +37,14 @@ jobs:
       - name: Update action.yml docker version
         uses: ValoriaTechnologia/FieldChartUpdater@v0.0.2
         with:
-          file: ./action.yml
+          file: ./action.yaml
           edits: '[{"path": "runs.image", "value": "ghcr.io/valoriatechnologia/field-chart-updater:${{ steps.tag.outputs.new_tag }}"}]'
 
       - name: Commit version bump
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add action.yml
+          git add action.yaml
           git commit -m "chore: bump version in action.yml to ${{ steps.tag.outputs.new_tag }}"
           git push
 
