--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -37,4 +37,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ env.REPO_LC }}:${{ inputs.tag }}
+          tags: ghcr.io/valoriatechnologia/field-chart-updater:${{ inputs.tag }}
