--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Bump tag version (dry run)
         id: tag
-        uses: mathieudutour/github-tag-action@v6.2
+        uses: ValoriaTechnologia/github-tag-action@v0.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: main
@@ -35,12 +35,14 @@ jobs:
           dry_run: true
 
       - name: Update action.yml docker version
+        if: steps.tag.outputs.new_tag != ''
         uses: ValoriaTechnologia/FieldChartUpdater@v0.0.2
         with:
           file: ./action.yaml
           edits: '[{"path": "runs.image", "value": "docker://ghcr.io/valoriatechnologia/field-chart-updater:${{ steps.tag.outputs.new_tag }}"}]'
 
       - name: Commit version bump
+        if: steps.tag.outputs.new_tag != ''
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -49,6 +51,7 @@ jobs:
           git push
 
       - name: Push temp branch and create tag
+        if: steps.tag.outputs.new_tag != ''
         run: |
           git tag -a ${{ steps.tag.outputs.new_tag }} -m "${{ steps.tag.outputs.new_tag }}"
           git push origin ${{ steps.tag.outputs.new_tag }}
