--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: main
-          default_bump: patch
+          default_bump: false
           dry_run: true
 
       - name: Update action.yml docker version
